# fairdm-rest-api

./: .gitignore  LICENSE  README.md  pyproject.toml  stack.development.env
config/: settings.py  urls.py
src/fairdm_api/: __init__.py  access_policies.py  apps.py  fields.py  menus.py  serializers.py  settings.py  urls.py  utils.py  views.py  viewsets.py
src/fairdm_api/contributors/: serializers.py  viewsets.py
